@@ -369,7 +369,7 @@ function simple_complex_validate_test_cli()
         ]
     );
 
-    $validate = Validate::getInstance();
+    //$validate = Validate::getInstance();
     $logger->debug('Validate complex bike: ' . (int) $validate->challenge($bike, $ruleSet));
     $recording = $validate->challengeRecording($bike, $ruleSet);
     $logger->debug('Validate complex bike recording:' . "\n" . $inspect->variable($recording));
